--- a/views/register.ejs
+++ b/views/register.ejs
@@ -45,6 +45,13 @@
                                     </div>
                                 </div>
 
+                                <div class="form-group">
+                                <label class="col-md-3 control-label" for="about">About</label>
+                                <div class="col-md-9">
+                                    <textarea id="about" name="about" type="text" placeholder="About You" class="form-control"></textarea>
+                                </div>
+                            </div>
+
                                 <!-- Form actions -->
                                 <div class="form-group">
                                     <div class="col-md-9 " id="SignIn">
