--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,3 @@
 <h1><%= message %></h1>
-<h2><%= error.status %></h2>
+<h2><%= error.status %> error, you've reached where the light touches the horizon! <a href="/">Abort!</a></h2>
 <pre><%= error.stack %></pre>
