--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,10 @@
 <%- include('partials/header'); %>
 <%- include('partials/navigation'); %>
 
+<% if(logoutMessage > 0) { %> 
+   <p class="alert alert-success"> <%= logoutMessage %> </p>        
+<% } %>
+
 <div class="container-fluid hidden-xs">
 	<div class="row">
 		<div class="col-xl-10 col-xl-offset-1">
