--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,11 +2,12 @@
     <%- include('partials/navigation'); %>
 
 
-        <!-- <form action="/login" method="POST"> -->
 
-        <h1>
-            <%=  message %>
-        </h1>
+    <% if(message && message > 0) { %> 
+        <%= message %>        
+        
+        <% } %>
+
 
         <div class="container login">
             <div class="row">
