--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -33,6 +33,7 @@
 	
 <script src="/jQuery/jquery-3.2.1.min.js"></script>
 <script src="/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+<script src="/jQuery/jquery.timeago.js" type="text/javascript"></script>
 <script src="/javascripts/customscript.js"></script>
 </body> 
 </html>
